@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 28-04-2005 changed: audioscrobbler info labels shown no info when scrobbler is disabled
   - 28-04-2005 fixed: rss feed could crash
   - 28-04-2005 updated: Chinese (Traditional) language file (Thnx to dog099)
   - 28-04-2005 updated: French language file (Thnx to modhack)
